fix tests after repository changes